syntax = "proto3";

option go_package = "/gen";

message Metadata {
    string id = 1;
    string title = 2;
    string description = 3;
    string director = 4;
}

message MovieDetails {
    float rating = 1;
    Metadata metadata = 2;
}

message GetMetadataRequest {
    string id = 1;
}

message GetMetadataResponse {
    Metadata result = 1;
}

message PutMetadataRequest {
    Metadata metadata = 1;
}

message PutMetadataResponse {

}

service MetadataService {
    rpc GetMetadata(GetMetadataRequest) returns (GetMetadataResponse) {}
    rpc PutMetadata(PutMetadataRequest) returns (PutMetadataResponse) {}
}

message GetAggregatedRatingRequest {
    string record_id = 1;
    string record_type = 2;
}

message GetAggregatedRatingResponse {
    double rating_value = 1;
}

message PutRatingRequest {
    string user_id = 1;
    string record_id = 2;
    string record_type = 3;
    double rating_value = 4;
}

message PutRatingResponse {

}

service RatingService {
    rpc GetAggregatedRating(GetAggregatedRatingRequest) returns (GetAggregatedRatingResponse) {}
    rpc PutRating(PutRatingRequest) returns (PutRatingResponse) {}
}

service MovieService {
    rpc GetMovieDetails(GetMovieDetailsRequest) returns (GetMovieDetailsResponse) {}
}

message GetMovieDetailsRequest {
    string movie_id = 1;
}

message GetMovieDetailsResponse {
    MovieDetails movie_details = 1;
}
